--- a/game.html
+++ b/game.html
@@ -6,7 +6,9 @@
     <title>whack a mole</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body>   
+    <p id="timer" >01:00</p>
     <script src="script.js"></script>
+ 
 </body>
 </html>
