--- a/game.html
+++ b/game.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="scoreDisplay">Score: 0</div>
+    <div id="timeDisplay">Time Left: 60s</div>
+    <button id="startNewGameButton"> Start New Game</button>
     <script src="script.js"></script>
 </body>
 </html>
