--- a/game.html
+++ b/game.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>whack a mole</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+    <div class="game-info">
+        <div id="score">Score: 0</div>
+        <div id="timer">Time: 60s</div>
+    </div>
+    <div class="game-container">
+        <div class="hole" id="hole1"></div>
+        <div class="hole" id="hole2"></div>
+        <div class="hole" id="hole3"></div>
+        <div class="hole" id="hole4"></div>
+        <div class="hole" id="hole5"></div>
+        <div class="hole" id="hole6"></div>
+        <div class="hole" id="hole7"></div>
+        <div class="hole" id="hole8"></div>
+        <div class="hole" id="hole9"></div>
+        <div class="hole" id="hole10"></div>
+        <div class="hole" id="hole11"></div>
+        <div class="hole" id="hole12"></div>
+        <div class="hole" id="hole13"></div>
+        <div class="hole" id="hole14"></div>
+        <div class="hole" id="hole15"></div>
+        <div class="hole" id="hole16"></div>
+        <div class="hole" id="hole17"></div>
+        <div class="hole" id="hole18"></div>
+        <div class="hole" id="hole19"></div>
+        <div class="hole" id="hole20"></div>
+        <div class="hole" id="hole21"></div>
+        <div class="hole" id="hole22"></div>
+        <div class="hole" id="hole23"></div>
+        <div class="hole" id="hole24"></div>
+        <div class="hole" id="hole25"></div>
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
