--- a/game.html
+++ b/game.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <div id="startGameButton" class="startButton">Start New Game</div>
+    <div id="scoreDisplay">Score: 0</div>
+    <div id="timeDisplay">Time Left: 60s</div>
+    <div id="startGameButton" class="startButton"></div>
+    
 
     <script src="script.js"></script>
 </body>
