--- a/game.html
+++ b/game.html
@@ -3,8 +3,8 @@
 
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>whack a mole</title>
@@ -12,52 +12,51 @@
     <link rel="stylesheet" href="styleModal.css">
 </head>
 
-<body>   
-    <div id="modal" class="modalContainer">
-        <h2 class="modalTitle">Enter your Name:</h2>
-        <input class="modalInputName" id="modalInputName" type="text">
-        <button id="modalBtn" class="modalBtn">Save User</button>
-    </div>
+<body>
+    <main>
+        <div id="modal" class="modalContainer">
+            <h2 class="modalTitle">Enter your Name:</h2>
+            <input class="modalInputName" id="modalInputName" type="text">
+            <button id="modalBtn" class="modalBtn">Save User</button>
+        </div>
 
-    <div class="game-info">
-        <div id="scoreDisplay"><b>Score: 0</b></div>
-        <div id="timeDisplay"><b> 60s</b></div>
-        <div id="startGameButton" class="startButton"></div>
-    </div>
-<!-- 
-    <div id="scoreDisplay">Score: 0</div>
-    <div id="timeDisplay">Time Left: 60s</div> -->
-    <div class="game-container">
-        <div class="hole" id="hole1"></div>
-        <div class="hole" id="hole2"></div>
-        <div class="hole" id="hole3"></div>
-        <div class="hole" id="hole4"></div>
-        <div class="hole" id="hole5"></div>
-        <div class="hole" id="hole6"></div>
-        <div class="hole" id="hole7"></div>
-        <div class="hole" id="hole8"></div>
-        <div class="hole" id="hole9"></div>
-        <div class="hole" id="hole10"></div>
-        <div class="hole" id="hole11"></div>
-        <div class="hole" id="hole12"></div>
-        <div class="hole" id="hole13"></div>
-        <div class="hole" id="hole14"></div>
-        <div class="hole" id="hole15"></div>
-        <div class="hole" id="hole16"></div>
-        <div class="hole" id="hole17"></div>
-        <div class="hole" id="hole18"></div>
-        <div class="hole" id="hole19"></div>
-        <div class="hole" id="hole20"></div>
-        <div class="hole" id="hole21"></div>
-        <div class="hole" id="hole22"></div>
-        <div class="hole" id="hole23"></div>
-        <div class="hole" id="hole24"></div>
-        <div class="hole" id="hole25"></div>
-    </div>
-
-    <script type="module" src="script.js"></script>
-    <script type="module" src="playerHandler.js"></script>
- 
+        <div class="game-info">
+            <div id="scoreDisplay"><b>Score: 0</b></div>
+            <div id="timeDisplay"><b> 60s</b></div>
+            <div id="startGameButton" class="startButton"></div>
+        </div>
+    <section>
+        <div class="game-container">
+            <div class="hole" id="hole1"></div>
+            <div class="hole" id="hole2"></div>
+            <div class="hole" id="hole3"></div>
+            <div class="hole" id="hole4"></div>
+            <div class="hole" id="hole5"></div>
+            <div class="hole" id="hole6"></div>
+            <div class="hole" id="hole7"></div>
+            <div class="hole" id="hole8"></div>
+            <div class="hole" id="hole9"></div>
+            <div class="hole" id="hole10"></div>
+            <div class="hole" id="hole11"></div>
+            <div class="hole" id="hole12"></div>
+            <div class="hole" id="hole13"></div>
+            <div class="hole" id="hole14"></div>
+            <div class="hole" id="hole15"></div>
+            <div class="hole" id="hole16"></div>
+            <div class="hole" id="hole17"></div>
+            <div class="hole" id="hole18"></div>
+            <div class="hole" id="hole19"></div>
+            <div class="hole" id="hole20"></div>
+            <div class="hole" id="hole21"></div>
+            <div class="hole" id="hole22"></div>
+            <div class="hole" id="hole23"></div>
+            <div class="hole" id="hole24"></div>
+            <div class="hole" id="hole25"></div>
+        </div>
+    </section>
+        <script type="module" src="script.js"></script>
+        <script type="module" src="playerHandler.js"></script>
+    </main>
 </body>
 
 </html>
