--- a/game.html
+++ b/game.html
@@ -21,37 +21,114 @@
         </div>
 
         <div class="game-info">
-            <div id="scoreDisplay"><b>Score: 0</b></div>
-            <div id="timeDisplay"><b> 60s</b></div>
+            <h1>Whack a mole Game</h1> 
             <div id="startGameButton" class="startButton"></div>
+            <div>
+                <div id="scoreDisplay" class=" info-box score-display">Score:<span> 0</span></div>
+                <div id="timeDisplay" class=" info-box time-display"> <span>60s</span> </div>    
+            </div>
+
         </div>
     <section>
         <div class="game-container">
-            <div class="hole" id="hole1"></div>
-            <div class="hole" id="hole2"></div>
-            <div class="hole" id="hole3"></div>
-            <div class="hole" id="hole4"></div>
-            <div class="hole" id="hole5"></div>
-            <div class="hole" id="hole6"></div>
-            <div class="hole" id="hole7"></div>
-            <div class="hole" id="hole8"></div>
-            <div class="hole" id="hole9"></div>
-            <div class="hole" id="hole10"></div>
-            <div class="hole" id="hole11"></div>
-            <div class="hole" id="hole12"></div>
-            <div class="hole" id="hole13"></div>
-            <div class="hole" id="hole14"></div>
-            <div class="hole" id="hole15"></div>
-            <div class="hole" id="hole16"></div>
-            <div class="hole" id="hole17"></div>
-            <div class="hole" id="hole18"></div>
-            <div class="hole" id="hole19"></div>
-            <div class="hole" id="hole20"></div>
-            <div class="hole" id="hole21"></div>
-            <div class="hole" id="hole22"></div>
-            <div class="hole" id="hole23"></div>
-            <div class="hole" id="hole24"></div>
-            <div class="hole" id="hole25"></div>
+            <div class="hole" id="hole1">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+            </div>
+            <div class="hole" id="hole2">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole3">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole4">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole5">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole6">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole7">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole8">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole9">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole10">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole11">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole12">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole13">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole14">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole15">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole16">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole17">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole18">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole19">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole20">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole21">                
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+            </div>
+            <div class="hole" id="hole22">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole23">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole24">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
+            <div class="hole" id="hole25">
+                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+
+            </div>
         </div>
     </section>
         <script type="module" src="script.js"></script>
