--- a/src/game.html
+++ b/src/game.html
@@ -59,9 +59,12 @@
         </div>
       </section>
     </main>
+    <!-- <script type="module" src="main.js"></script> -->
 
     <script type="module" src="database.js"></script>
-    <script type="module" src="script.js"></script>
-    <script type="module" src="playerHandler.js"></script>
+   
+    <script type="module" src="playerHandler.js">
+      
+    </script> <script type="module" src="script.js"></script>
   </body>
 </html>
