--- a/game.html
+++ b/game.html
@@ -10,6 +10,7 @@
     <title>whack a mole</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="styleModal.css">
+
 </head>
 
 <body>
@@ -21,116 +22,120 @@
         </div>
 
         <div class="game-info">
-            <h1>Whack a mole Game</h1> 
+            <h1>Whack a mole Game</h1>
             <div id="startGameButton" class="startButton"></div>
             <div>
                 <div id="scoreDisplay" class=" info-box score-display">Score:<span> 0</span></div>
-                <div id="timeDisplay" class=" info-box time-display"> <span>60s</span> </div>    
+                <div id="timeDisplay" class=" info-box time-display"> <span>60s</span> </div>
             </div>
 
         </div>
-    <section>
-        <div class="game-container">
-            <div class="hole" id="hole1">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
-            </div>
-            <div class="hole" id="hole2">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+        <section>
+            <div class="game-container">
+                <div class="hole" id="hole1">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole2">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole3">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole3">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole4">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole4">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole5">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole5">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole6">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole6">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole7">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole7">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole8">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole8">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole9">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole9">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole10">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole10">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole11">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole11">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole12">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole12">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole13">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole13">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole14">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole14">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole15">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole15">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole16">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole16">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole17">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole17">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole18">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole18">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole19">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole19">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole20">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole20">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole21">                
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
-            </div>
-            <div class="hole" id="hole22">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole21">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole22">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole23">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole23">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole24">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole24">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
-            </div>
-            <div class="hole" id="hole25">
-                <img src="img/mole-to-whacke-removebg-preview.png" alt="">
+                </div>
+                <div class="hole" id="hole25">
+                    <img src="img/mole-to-whacke-removebg-preview.png" alt="">
 
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+        <audio id="introSound" src="sound/Mario klippt.mp3"></audio>
+        <audio id="gameOverSound" src="sound/game over.mp3"></audio>
+        <audio id="moleHitSound" src="sound/träff ljud.mp3"></audio>
+
         <script type="module" src="script.js"></script>
         <script type="module" src="playerHandler.js"></script>
     </main>
