--- a/src/game.html
+++ b/src/game.html
@@ -21,7 +21,7 @@
       <div id="modal" class="modalContainer">
         <h2 class="modalTitle">Enter your Name:</h2>
         <input class="modalInputName" id="modalInputName" type="text" />
-        <button id="modalBtn" class="modalBtn" >Save User</button>
+        <button id="modalBtn" class="modalBtn">Save User</button>
       </div>
 
       <div class="game-info">
@@ -59,12 +59,12 @@
         </div>
       </section>
     </main>
-    <!-- <script type="module" src="main.js"></script> -->
-
+    <script type="module" src="main.js"></script>
+<!-- 
     <script type="module" src="database.js"></script>
    
     <script type="module" src="playerHandler.js">
       
-    </script> <script type="module" src="script.js"></script>
+    </script> <script type="module" src="script.js"></script> -->
   </body>
 </html>
