--- a/src/game.html
+++ b/src/game.html
@@ -139,7 +139,7 @@
               </div>
           </div>
       </section>
-      <audio id="introSound" src="sound/Mario klippt.mp3"></audio>
+      <audio id="introSound" src="sound/Mario klippt.mp3" loop></audio>
       <audio id="gameOverSound" src="sound/game over.mp3"></audio>
       <audio id="moleHitSound" src="sound/träff ljud.mp3"></audio>
     </main>
