--- a/src/game.html
+++ b/src/game.html
@@ -139,9 +139,9 @@
               </div>
           </div>
       </section>
-      <audio id="introSound" src="sound/Mario klippt.mp3" loop></audio>
+      <audio id="introSound" src="sound/game sound.mp3"></audio>
       <audio id="gameOverSound" src="sound/game over.mp3"></audio>
-      <audio id="moleHitSound" src="sound/träff ljud.mp3"></audio>
+      <audio id="moleHitSound" src="sound/träffljud.mp3"></audio>
     </main>
     
     <script type="module" src="script.js"></script>
