displaying reaction time correct, and started on saving reaction time in db, which is not finished

--- a/src/game.html
+++ b/src/game.html
@@ -34,6 +34,8 @@
           <div id="top10Container" class="hidden">
             <h2>Top 10 Scores</h2>
             <ul id="top10List"></ul>
+            <h2>Honorable Reward - fastest reaction time</h2>
+            <ol id="reactionTimeList"></ol>
           </div> 
 
       </div>
